--- a/style.css
+++ b/style.css
@@ -1,19 +1,32 @@
+/* Ajout pour la responsivité */
+@viewport {
+  width: device-width;
+  initial-scale: 1;
+  maximum-scale: 1;
+  user-scalable: no;
+}
+
 html {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
+
 body {
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
     Arial, sans-serif;
 }
+
 h1 {
   text-align: center;
 }
+
 h2 {
   text-align: justify;
 }
+
 header {
   background-color: rgb(9, 104, 70);
   height: 10vh;
@@ -23,11 +36,20 @@ header {
   justify-content: center;
   align-items: center;
   border: 0;
+  width: 100%; /* S'assure que la barre d'entête prend toute la largeur */
 }
-img {
+
+header img {
   height: 100%;
   padding: 20px;
+  max-width: 100%; /* L'image s'ajuste en fonction de l'écran */
 }
+
+header h1 {
+  font-size: 1.5em;
+  margin: 0;
+}
+
 nav {
   float: left;
   width: auto;
@@ -35,11 +57,14 @@ nav {
   background-color: cadetblue;
   margin-right: 10px;
   display: flex;
+  flex-direction: column;
 }
+
 ul {
   padding: 0px;
   margin: 0px;
 }
+
 a {
   text-decoration: none;
   color: black;
@@ -52,6 +77,7 @@ li {
   text-decoration: none;
   color: black;
 }
+
 li:hover {
   background-color: gray;
   color: white;
@@ -69,22 +95,27 @@ footer {
   display: flex;
   justify-content: space-evenly;
 }
+
 p {
   text-align: justify;
   padding: 10px;
 }
+
 .footer {
   color: white;
 }
+
 .sous_menus {
   display: none;
   position: absolute;
   left: 275px;
   background-color: cadetblue;
 }
+
 nav > ul li:hover .sous_menus {
   display: block;
 }
+
 .sous_menus2 {
   display: none;
   position: absolute;
@@ -93,10 +124,45 @@ nav > ul li:hover .sous_menus {
   width: max-content;
   color: black;
 }
+
 nav > ul > li > ul li:hover .sous_menus2 {
   display: block;
 }
+
 li:hover {
   display: block;
   color: white;
+}
+
+/* Styles pour rendre le site responsive */
+@media (max-width: 768px) {
+  header {
+    height: auto;
+    padding: 10px;
+  }
+
+  header img {
+    width: 40%;
+    max-height: 50px;
+  }
+
+  nav {
+    width: 100%;
+    height: auto;
+    margin: 0;
+  }
+
+  nav ul {
+    flex-direction: column;
+  }
+
+  .sous_menus {
+    position: static;
+    width: 100%;
+  }
+
+  footer {
+    height: 8vh;
+    font-size: 0.8em;
+  }
 }
